# hashbag

./: Cargo.toml  README.md  azure-pipelines.yml  codecov.yml
.github/workflows/: check.yml  msrv.yml  test.yml
src/: lib.rs  serde.rs  with_serde.rs
