[package]
name = "hashbag"
version = "0.1.10"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "An unordered multiset implementation using a hash bag"
repository = "https://github.com/jonhoo/hashbag.git"

keywords = ["bag","multiset","set"]
categories = ["data-structures"]

[dependencies]
griddle = { version = "0.5", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

[features]
amortize = ["griddle"]
